[package]
name = "warden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.17", features = ["derive"] }
http = "0.2.8"
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
log = "0.4.17"
querystring = "1.1.0"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tower = { version = "0.4.13", features = ["log", "make"] }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[[bin]]
name = "warden"
path = "src/main.rs"
